--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+sonar.projectKey=sonar-server_project5
+sonar.organization=sonar-server
+sonar.host.url=https://sonarcloud.io
+sonar.login=296278054622d8b827ecca28ed12e18e7e6666e2
